<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:focusable="true"
		android:focusableInTouchMode="true"
		tools:context=".AddProductActivity">

	<androidx.appcompat.widget.Toolbar
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@color/colorPrimary"
			android:theme="@style/ToolbarStyle"
			android:minHeight="?attr/actionBarSize" android:id="@+id/addProductToolbar"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintEnd_toEndOf="parent" style="@style/Base.V14.Theme.MaterialComponents.Light"
			app:layout_constraintHorizontal_bias="0.0"/>
	<ImageButton
			android:layout_width="30dp"
			android:layout_height="30dp" app:srcCompat="@drawable/ic_check_black_24dp"
			android:id="@+id/saveNewProductButton" app:layout_constraintEnd_toEndOf="@+id/addProductToolbar"
			android:layout_marginEnd="16dp" android:layout_marginTop="8dp"
			app:layout_constraintTop_toTopOf="@id/addProductToolbar"
			android:scaleType="fitXY"
			android:maxHeight="100dp"
			android:maxWidth="100dp"
			android:adjustViewBounds="true"
			android:tint="@android:color/white"
			android:background="@android:color/transparent"
			app:layout_constraintBottom_toBottomOf="@+id/addProductToolbar" android:layout_marginBottom="8dp"/>
	<ScrollView
			android:layout_width="0dp"
			android:layout_height="0dp" app:layout_constraintTop_toBottomOf="@+id/addProductToolbar"
			app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintHorizontal_bias="1.0"
			app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="1.0">
		<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
		                                                   android:layout_height="wrap_content"
		>
			<ImageView
					android:layout_width="0dp"
					android:layout_height="194dp" android:src="@drawable/ic_image_black_24dp"
					android:id="@+id/imageView2" app:layout_constraintStart_toStartOf="parent"
					android:background="@android:color/darker_gray"
					android:tint="@color/divider_grey"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintHorizontal_bias="0.32"
					app:layout_constraintTop_toTopOf="parent"/>
			<com.google.android.material.textfield.TextInputLayout
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:hint="@string/brand"
					app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
					android:id="@+id/brandInputLayout"
					android:layout_marginTop="32dp"
					app:layout_constraintTop_toBottomOf="@+id/imageView2" android:layout_marginStart="32dp"
					app:layout_constraintStart_toStartOf="parent">

				<com.google.android.material.textfield.TextInputEditText
						android:layout_width="match_parent"
						android:layout_height="wrap_content" android:id="@+id/brandInputText"/>

			</com.google.android.material.textfield.TextInputLayout>
			<com.google.android.material.textfield.TextInputLayout
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:hint="@string/model"
					app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
					app:layout_constraintTop_toBottomOf="@+id/brandInputLayout"
					android:layout_marginTop="32dp" android:id="@+id/modelInputLayout"
					android:layout_marginStart="32dp" app:layout_constraintStart_toStartOf="parent">

				<com.google.android.material.textfield.TextInputEditText
						android:layout_width="match_parent"
						android:layout_height="wrap_content" android:id="@+id/modelInputText"/>

			</com.google.android.material.textfield.TextInputLayout>
			<com.google.android.material.textfield.TextInputLayout
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:hint="@string/ean"
					app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
					android:id="@+id/eanInputLayout"
					app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
					app:layout_constraintTop_toBottomOf="@id/companySpinner" android:layout_marginTop="32dp">

				<com.google.android.material.textfield.TextInputEditText
						android:layout_width="match_parent"
						android:layout_height="wrap_content" android:id="@+id/eanInputText"/>

			</com.google.android.material.textfield.TextInputLayout>
			<Button
					android:text="@string/scan"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/scanButton"
					app:layout_constraintTop_toBottomOf="@+id/eanInputLayout" app:layout_constraintEnd_toEndOf="parent"
					android:layout_marginEnd="32dp"/>
			<com.google.android.material.textfield.TextInputLayout
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:hint="@string/accessories"
					app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
					app:layout_constraintTop_toBottomOf="@id/scanButton"
					android:layout_marginTop="16dp" android:id="@+id/accesoryInputLayout"
					app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp">

				<com.google.android.material.textfield.TextInputEditText
						android:layout_width="match_parent"
						android:layout_height="wrap_content" android:id="@+id/accesoryInputText"/>

			</com.google.android.material.textfield.TextInputLayout>
			<Button
					android:text="@string/add"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/addAccessoryButton"
					app:layout_constraintTop_toBottomOf="@+id/accesoryInputLayout"
					app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"/>
			<com.weiwangcn.betterspinner.library.BetterSpinner
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:id="@+id/companySpinner" app:layout_constraintEnd_toEndOf="parent"
					android:layout_marginEnd="32dp"
					android:hint="@string/company"
					app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
					android:layout_marginTop="42dp" app:layout_constraintTop_toBottomOf="@+id/modelInputLayout"/>
			<com.google.android.material.floatingactionbutton.FloatingActionButton
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:clickable="true" app:srcCompat="@drawable/ic_edit_black_24dp"
					android:tint="@color/white"
					android:id="@+id/floatingActionButton3" app:layout_constraintEnd_toEndOf="parent"
					android:layout_marginEnd="16dp"
					app:layout_constraintBottom_toTopOf="@+id/brandInputLayout"
					app:elevation="5dp" app:layout_constraintTop_toBottomOf="@+id/imageView2"
					android:layout_marginBottom="32dp"/>
			<LinearLayout
					android:orientation="vertical"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
					app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
					android:id="@+id/accessoryListVIew"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/addAccessoryButton">
			</LinearLayout>
		</androidx.constraintlayout.widget.ConstraintLayout>
	</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>